test/ui/tests/fail/class-borrowed-channel-sync.rs
struct Example;

#[neon::class]
impl Example {
    fn method(&self, _ch: &Channel) {}
}

fn main() {}
